# patrimony-system

./: .dockerignore  README  docker-compose.yml  start.sh
ai-service/: Dockerfile  app.py  requirements.txt
ai-service/app/: main.py
backend/: .env.backup  Cargo.toml  Dockerfile
backend/migrations/: 0001_initial_setup.sql  0002_permissions.sql  0003_seed_data.sql
backend/scripts/: test_db.rs
backend/src/: main_copy.rs
backend/src/database/: connection.rs  database.rs  mod.rs
backend/src/handlers/: handlers.rs  mod.rs  patrimony.rs  patrimony_copy.rs  transfer.rs
backend/src/models/: mod.rs  patrimony.rs  transfer.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: 1.pack  2.pack  3.pack  4.pack  index.pack  index.pack.old
frontend/.next/cache/webpack/client-development-fallback/: index.pack
frontend/.next/cache/webpack/server-development/: 0.pack  (+5 more)
frontend/.next/server/: _error.js
frontend/.next/server/pages/: _app.js  _document.js  _error.js  index.js
frontend/.next/static/chunks/: _error.js  webpack.js
frontend/.next/static/webpack/: webpack.7a8c3bd55a33646b.hot-update.js  webpack.8f8028b2af1d522a.hot-update.js
frontend/components/: Dashboard.module.css  Dashboard.tsx  PatrimonyForm.tsx  PatrimonyForm_copy.tsx  PatrimonyList.module.css  PatrimonyList.tsx  PatrimonyList_copy.tsx  TransferModal.module.css  TransferModal.tsx
frontend/pages/: index.tsx
frontend/types/: Patrimony.ts
frontend/utils/: auth.ts
mobile/: App.js  package-lock.json  package.json
(+1 files in other folders)
